test(java): :truck: Migrate tests to junit5